# Copyright 2023 Salesforce, Inc. All rights reserved.
[package]
name = "test_policy"
version = "1.0.0"
rust-version = "1.74.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.anypoint]
group_id = "1afca872-0a45-486c-8e44-66b585e8c9c8"
definition_asset_id = "test-policy"
implementation_asset_id = "test-policy-flex"

[dependencies]
pdk = { version = "1.0.1", registry = "anypoint" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
anyhow = "1.0"
base64 = "0.13"
urlencoding = "1.3.3"
chrono = { version = "0.4", features = ["serde"] }
hmac = "0.12.1"
sha2 = "0.10.0"
json = "0.12.4"
uuid = { version = "1.1.2", features = ["v4"] }

[dev-dependencies]
pdk-test = { version = "1.0.1", registry = "anypoint" }
httpmock = "0.6"
reqwest = "0.11"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 'z'
strip = "debuginfo"
